apps/boodschappen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boodschappen
  namespace: boodschappen
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: boodschappen
  template:
    metadata:
      labels:
        app.kubernetes.io/name: boodschappen
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      securityContext:
        fsGroup: 1000
      containers:
        - name: boodschappen
          image: ghcr.io/jvz-devx/boodschappen:main@sha256:b56eaba283109f553a4334d8353f9d8f52dce9211f6dc628f572cbfe3ec90a70 # {"$imagepolicy": "flux-system:boodschappen"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 192Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: boodschappen-data
