apps/boodschappen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boodschappen
  namespace: boodschappen
spec:
  selector:
    app.kubernetes.io/name: boodschappen
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
