apps/boodschappen/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boodschappen
  namespace: boodschappen
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: f4f59044-cc55-41f0-a76a-96fdfeb42dc9.cfargotunnel.com
spec:
  ingressClassName: traefik
  rules:
    - host: boodschappen.jensvanzutphen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boodschappen
                port:
                  number: 3000
  tls:
    - hosts:
        - boodschappen.jensvanzutphen.com
      secretName: boodschappen-tls
